Added footer markup to all pages and added footer styling

--- a/album.html
+++ b/album.html
@@ -21,5 +21,8 @@
             </ul>
         </div>
     </div>
+    <div class="footer">
+        <p>Copyright 2022 by Evan Moon. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
