--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,8 @@
     <div class="contact-info">
         
     </div>
+    <div class="footer">
+        <p>Copyright 2022 by Evan Moon. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
