--- a/family.html
+++ b/family.html
@@ -51,5 +51,8 @@
             <p>Misa is our Thirteen year old pet kitty and loves taking long naps in the sun and causing mischief when no one is looking!</p>
         </div>
     </div>
+    <div class="footer">
+        <p>Copyright 2022 by Evan Moon. All Rights Reserved.</p>
+    </div>
 </body>
 </html>
