Updated family page markup and simplified css styling

--- a/family.html
+++ b/family.html
@@ -21,33 +21,63 @@
             </ul>
         </div>
     </div>
-    <div class="parent-container">
-        <div class="parent-one">
+    <div class="container">
+        <div class="profile">
             <h3>Mommy</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Mommy is an IT Technician with a passion for her three girls, husband, and family.</p>
         </div>
-        <div class="parent-two">
+        <div class="profile">
             <h3>Deviee</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Deviee is a Computer Programmer with a passion for his wife, three girls, and pet cat.</p>
         </div>
     </div>
-    <div class="child-container">
-        <div class="child-one">
+    <div class="container">
+        <div class="profile">
             <h3>Amelia</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Amelia is in Seventh grade and enjoys computer programming, tinkering wtih robots, and singing in her school choir.</p>
         </div>
-        <div class="child-two">
+        <div class="profile">
             <h3>Ellie</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Ellie is in Fourth grade and loves arts and crafts and learning everything there is to know.</p>
         </div>
-        <div class="child-three">
+        <div class="profile">
             <h3>Mila</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Mila is in Third grade and loves crafting with her sisters and dancing like nobody is watching.</p>
         </div>
     </div>
-    <div class="pet-container">
-        <div class="cat">
+    <div class="container">
+        <div class="profile">
             <h3>Misa</h3>
+            <div class="profile-image">
+                <a target="_blank" href="">
+                    <img src="" alt="" width="200" height="200">
+                  </a>
+            </div>
             <p>Misa is our Thirteen year old pet kitty and loves taking long naps in the sun and causing mischief when no one is looking!</p>
         </div>
     </div>
