Added contact us page markup and styling

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,8 @@
         </div>
     </div>
     <div class="contact-info">
-        
+        <h3>Click the email link below to send us a message!</h3>
+        <h1><a href="mailto:email@gmail.com">email@gmail.com</a></h1>
     </div>
     <div class="footer">
         <p>Copyright 2022 by Evan Moon. All Rights Reserved.</p>
