Updated navbar and page styling. Added Calendar page and updated link refs

--- a/contact.html
+++ b/contact.html
@@ -11,15 +11,12 @@
     <div class="title">
         <h1>Contact Us</h1>
     </div>
-    <div class="nav-bar">
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="family.html">Our Family</a></li>
-                <li><a href="album.html">Photo Album</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </div>
+    <<div class="nav-bar">
+        <a href="index.html">Home</a>
+        <a href="family.html">Our Family</a>
+        <a href="album.html">Photo Album</a>
+        <a href="calendar.html">Calendar</a>
+        <a class="active" href="contact.html">Contact Us</a>
     </div>
     <div class="contact-info">
         <h3>Click the email link below to send us a message!</h3>
