--- a/family.html
+++ b/family.html
@@ -12,14 +12,11 @@
         <h1>Our Family</h1>
     </div>
     <div class="nav-bar">
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="family.html">Our Family</a></li>
-                <li><a href="album.html">Photo Album</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </div>
+        <a href="index.html">Home</a>
+        <a class="active" href="family.html">Our Family</a>
+        <a href="album.html">Photo Album</a>
+        <a href="calendar.html">Calendar</a>
+        <a href="contact.html">Contact Us</a>
     </div>
     <div class="container">
         <div class="profile">
@@ -27,7 +24,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Mommy is an IT Technician with a passion for her three girls, husband, and family.</p>
         </div>
@@ -36,7 +33,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Deviee is a Computer Programmer with a passion for his wife, three girls, and pet cat.</p>
         </div>
@@ -47,7 +44,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Amelia is in Seventh grade and enjoys computer programming, tinkering wtih robots, and singing in her school choir.</p>
         </div>
@@ -56,7 +53,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Ellie is in Fourth grade and loves arts and crafts and learning everything there is to know.</p>
         </div>
@@ -65,7 +62,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Mila is in Third grade and loves crafting with her sisters and dancing like nobody is watching.</p>
         </div>
@@ -76,7 +73,7 @@
             <div class="profile-image">
                 <a target="_blank" href="">
                     <img src="" alt="" width="200" height="200">
-                  </a>
+                </a>
             </div>
             <p>Misa is our Thirteen year old pet kitty and loves taking long naps in the sun and causing mischief when no one is looking!</p>
         </div>
