--- a/index.html
+++ b/index.html
@@ -12,14 +12,11 @@
         <h1>Welcome to Our Family!</h1>
     </div>
     <div class="nav-bar">
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="family.html">Our Family</a></li>
-                <li><a href="album.html">Photo Album</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </div>
+        <a class="active" href="index.html">Home</a>
+        <a href="family.html">Our Family</a>
+        <a href="album.html">Photo Album</a>
+        <a href="calendar.html">Calendar</a>
+        <a href="contact.html">Contact Us</a>
     </div>
     <div class="introduction">
         <p>Welcome to our family website! Please have a look around and catch up on all the events and activities our family has been up to. Personal and identifying information is ommitted for safety reasons but rest be assured we will share as much as we possibly can! </p>
