--- a/album.html
+++ b/album.html
@@ -12,14 +12,11 @@
         <h1>Photo Album</h1>
     </div>
     <div class="nav-bar">
-        <div class="nav-links">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="family.html">Our Family</a></li>
-                <li><a href="album.html">Photo Album</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-            </ul>
-        </div>
+        <a href="index.html">Home</a>
+        <a href="family.html">Our Family</a>
+        <a class="active" href="album.html">Photo Album</a>
+        <a href="calendar.html">Calendar</a>
+        <a href="contact.html">Contact Us</a>
     </div>
 
     <div class="gallery-container">
