--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="contact.html">Contact Us</a>
     </div>
     <div class="introduction">
-        <p>Welcome to our family website! Please have a look around and catch up on all the events and activities our family has been up to. Personal and identifying information is ommitted for safety reasons but rest be assured we will share as much as we possibly can! </p>
+        <p>Welcome to our family website! Please have a look around and catch up on all the events and activities our family has been up to. Personal and identifying information is ommitted for safety reasons but rest assured we will share as much as we possibly can! </p>
         <p>Feel free to reach out to us with any questions or comments using the <a href="contact.html">'Contact Us'</a> link at the top of the page. Thank you for visiting and we hope you enjoy your time catching up with us!</p>
     </div>
     <div class="footer">
